# mps

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  PERFORMANCE_BENCHMARKS.md  PLATFORM_TUNING.md  README.md  RELEASE_CHECKLIST.md
examples/: mps_microbench.rs
src/: lib.rs  thread_pool.rs  worker.rs
src/balancer/: mod.rs
src/scheduler/: dispatcher.rs  mod.rs  queue.rs
src/simd/: aarch64_neon.rs  mod.rs  powerpc_altivec.rs  scalar.rs  x86_64_avx512.rs
src/topology/: detector.rs
