[package]
name = "mps"
version = "0.5.5"
edition = "2021"
license = "MPL-2.0"
description = "Bare-metal CPU scheduler, overlapped physics dispatcher, and runtime-dispatched SIMD kernels for Tileline."
repository = "https://github.com/berrycomp/mps"
readme = "README.md"
keywords = ["scheduler", "simd", "physics", "lock-free", "tileline"]
categories = ["concurrency", "game-development"]
rust-version = "1.78"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["block-padding"] }
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
crossbeam = "0.8.4"
ctr = "0.9.2"
hmac = "0.12.1"
hex = "0.4.3"
hkdf = "0.12.4"
md-5 = "0.10.6"
miniz_oxide = "0.8.9"
num_cpus = "1.17.0"
percent-encoding = "2.3.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
wasmer = "7.0.1"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "11.6.0"
